# ignf-gpf-api

./: .gitignore  .pylintrc  MANIFEST.in  README.md  check.sh  config_recette.ini  config_vsasyan.ini  insomnia.json  mkdocs.yml  pyproject.toml  test_FileResolver.py  wfs-generic.jsonc  wfs-generic_gpf.jsonc
.github/workflows/: ci-dev.yml  ci-main.yml  ci-prod.yml  code-quality.yml
1_dataset_vector/: CANTON.md5  upload_descriptor.json
2_dataset_vector/: test_2.md5  upload_descriptor.json
2_dataset_vector/test/: site.shx
3_dataset_vector_gpf/3_dataset_vector_gpf/: test.md5
docker/: Dockerfile  README.md  docker-compose.yml
docs/: .gitignore  comme-executable.md  comme-module.md  configuration.md  configuration_details.md  custom.css  development.md  index.md  tutoriel_1_archive.md  tutoriel_2_flux_vecteur.md  tutoriel_3_flux_raster.md  upload_descriptor.md
docs/images/: index__utilisation_module.excalidraw
docs/reference/: auth.md  io.md  store.md  workflow.md
ignf_gpf_api/: Error.py  Errors.py  __init__.py  __main__.py
ignf_gpf_api/_conf/: default.ini
ignf_gpf_api/action/: Action.py  ActionAbstract.py  ConfigurationAction.py  DictResolver.py  Errors.py  FileResolver.py  GlobalResolver.py  OfferingAction.py  ProcessingExecutionAction.py  StoreEntityResolver.py  UploadAction.py  Workflow.py
ignf_gpf_api/auth/: Authentifier.py  Errors.py  Token.py  __init__.py
ignf_gpf_api/conf/: default.ini
ignf_gpf_api/helper/: FileHelper.py  JsonHelper.py  PrintLogHelper.py  __init__.py
ignf_gpf_api/io/: ApiRequester.py  Color.py  Config.py  Dataset.py  DescriptorFileReader.py  Errors.py  JsonConverter.py  OutputManager.py  __init__.py
ignf_gpf_api/pattern/: SingleInstance.py  Singleton.py  __init__.py
ignf_gpf_api/store/: AbstractCommonFile.py  Annexe.py  Annexes.py  Check.py  CheckExecution.py  CommentInterface.py  Configuration.py  Datastore.py  Endpoint.py  Errors.py  EventInterface.py  Offering.py  Processing.py  ProcessingExecution.py  Static.py  Store.py  StoreEntity.py  StoredData.py  TagInterface.py  Tms.py  Upload.py  User.py  __init__.py
ignf_gpf_api/workflow/: Errors.py  Workflow.py  __init__.py
tests/: ErrorsTestCase.py  GpfTestCase.py  MainTestCase.py
tests/_conf/: test_requester.ini  test_upload.ini  test_value_type.ini
tests/_config/: config_test_authentifier.ini  test_overload.ini  test_requester.ini
tests/action/: ActionAbstractTestCase.py  FileResolverTestCase.py  UploadActionTestCase.py  WorkflowTestCase.py
tests/auth/: AuthentifierTestCase.py  TokenTestCase.py
tests/helper/: FileHelperTestCase.py  JsonHelperTestCase.py
tests/io/: ApiRequesterTestCase.py  ConfigTestCase.py  DatasetTestCase.py  DescriptorFileReaderTestCase.py  ErrorsTestCase.py  JsonConverterTestCase.py
tests/store/: AbstractCommonFileTestCase.py  AnnexeTestCase.py  AnnexesTestCase.py  (+13 more)
uml/: classes.uxf  interfaces.uxf
worflows/: ppk-generique.jsonc  wfs-generique.jsonc
workflows/: archive-generic.jsonc  ppk-generic.jsonc  wfs-generic.jsonc
(+168 files in other folders)
