[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "ignf_gpf_api"
dist-name = "ignf_gpf_api"
description-file = "README.md"
author = "IGNF"
author-email = "valentin.sasyan@ign.fr"
home-page = "https://github.com/VSasyan/ignf-gpf-api"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.8"
requires = []

[tool.flit.scripts]
realpython = "ignf_gpf_api.__main__:main"

[tool.black]
line-length = 200
force-exclude = '(\.git|\.vscode|\.toml$)'
