[build-system]
requires = ["flit >=3.7"]
build-backend = "flit.buildapi"

[project]
name = "ignf_gpf_api"
authors = [
    {name="Valentin Sasyan", email="valentin.sasyan@ign.fr"},
]
readme="README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
dynamic = ["version", "description"]

dependencies = [
    "requests >=2.6",
    "configparser",
    "types-requests",
]

[project.optional-dependencies]
test = [
    "black<23",
    "pylint==2.13",
    "mypy==0.942",
    "requests_mock",
]
doc = ["sphinx"]

[project.urls]
Source = "https://github.com/VSasyan/ignf-gpf-api"
Documentation = "https://github.com/VSasyan/ignf-gpf-api"

[project.scripts]
realpython = "ignf_gpf_api.__main__:main"

[tool.black]
line-length = 200
force-exclude = '(\.git|\.vscode|\.toml$)'
