[build-system]
requires = ["flit >=3.7,<4"]
build-backend = "flit.buildapi"

[project]
name = "ignf_gpf_api"
authors = [
    {name="Valentin Sasyan", email="valentin.sasyan@ign.fr"},
]
readme="README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
dynamic = ["version"]
description = "Python API to simplify the use of the GPF HTTPS API."

dependencies = [
    "requests>=2.6",
    "configparser",
    "types-requests",
    "jsonschema",
    "jsonc-parser",
    "beartype",
    "toml",
    "types-toml",
]

[project.optional-dependencies]
test = [
    "black<23",
    "pylint==2.13",
    "mypy==0.942",
    "requests_mock",
    "coverage",
]
doc = ["mkdocs==1.3.0", "mkdocs[i18n]", "mkdocs-ivory >= 0.4.6, < 1", "mkapi==1.0.14", "pheasant >= 2.5.9, < 3", "pymdown-extensions"]

[project.urls]
Source = "https://github.com/VSasyan/ignf-gpf-api"
Documentation = "https://github.com/VSasyan/ignf-gpf-api"

[project.scripts]
realpython = "ignf_gpf_api.__main__:main"

[tool.black]
line-length = 200
force-exclude = '(\.git|\.vscode|\.toml$)'

[tool.coverage.run]
omit = ["*/tests/*", "ignf_gpf_api/io/OutputManager.py", "*/__main__.py", "*/__init__.py"]
